--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -75,3 +75,10 @@ section {
   height: auto;
   margin-bottom: 16px;
 }
+.scroll-container {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+}
+.scroll-container::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
