--- a/src/components/ProfileSideBar/style.module.scss
+++ b/src/components/ProfileSideBar/style.module.scss
@@ -4,8 +4,8 @@
   overflow: hidden;
   flex: 1 0;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
-    rgba(0, 0, 0, 0.08) 0px 6px 12px 0px;
+  // box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+  //   rgba(0, 0, 0, 0.08) 0px 6px 12px 0px;
   border-right: 1px solid var(--color-borders);
 
   .sidebar-content {
@@ -14,17 +14,17 @@
     background-color: var(--c-bg);
   }
 
-  button {
-    cursor: pointer;
-    border-radius: 0.125rem;
-    padding: 0.5rem 1rem;
-    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    color: var(--color-primary-text);
-
-    &:hover {
-      background-color: var(--color-content-background);
-    }
-  }
+  //   button {
+  //     cursor: pointer;
+  //     border-radius: 0.125rem;
+  //     padding: 0.5rem 1rem;
+  //     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  //     color: var(--color-primary-text);
+  //
+  //     &:hover {
+  //       background-color: var(--color-content-background);
+  //     }
+  //   }
 
   ul {
     display: flex;
@@ -53,5 +53,5 @@
 }
 
 .isActive {
-  color: var(--color-background);
+  color: var(--color-primary-text);
 }
