--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -33,15 +33,6 @@
   --text: "Red Hat Display";
 }
 
-// @media (prefers-color-scheme: dark) {
-//   :root {
-//     --background: #0a0a0a;
-//     --foreground: #ededed;
-//
-//     // Green
-//   }
-// }
-
 html,
 body {
   box-sizing: border-box;
@@ -81,4 +72,40 @@ section {
 }
 .scroll-container::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Edge */
+}
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+
+  #receipt,
+  #receipt * {
+    visibility: visible;
+  }
+
+  #receipt {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 80mm; /* Change to 80mm for wider printers */
+    min-height: auto;
+    font-size: 11px; /* Adjust font size for receipt */
+    margin: 0;
+  }
+
+  #header {
+    font-size: 16px; /* Adjust font size for receipt */
+  }
+  #payment {
+    font-size: 11px; /* Adjust font size for receipt */
+  }
+
+  button {
+    display: none !important; /* Hide print button */
+  }
+  @page {
+    size: 58mm auto; /* Change to 80mm if needed */
+    margin: 0;
+  }
 }
