--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,29 +7,12 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-
   /* **Main Colors** */
   --primary: #2f4f3a; /* Deep Forest Green */
   --secondary: #5f7d6d; /* Muted Teal-Green */
-
-  /* **Dark Variants** */
-  --darkest: #1a2617; /* Near-Black Green */
-  --dark: #243524; /* Deep Earth Green */
-  --dark-medium: #3a5740; /* Midway Deep Green */
-
-  /* **Mid Tones** */
   --medium: #4e725a; /* Balanced Natural Green */
   --medium-light: #6d8a74; /* Gentle Soft Green */
-
-  /* **Light Variants** */
-  --green-light: #a8c3a0; /* Soft Pastel Green */
-  --light: #f1f3ec; /* Warm Off-White */
-  --lighter: #f8faf6; /* Softest Neutral */
-
-  /* **Accent Colors** */
-  --accent: #d1e8c7; /* Fresh Green Tint */
   --muted-accent: #9eb79c; /* Softer Accent */
-
   --text: "Red Hat Display";
 }
 
@@ -40,7 +23,7 @@ body {
   padding: 0;
   font-family: "red hat display", serif;
   position: relative;
-  min-height: 100%; /* Ensure the page takes up the full viewport height */
+  min-height: 100%;
   background: var(--background);
 }
 .main_text {
@@ -61,6 +44,7 @@ body {
   font-family: "red hat display";
 }
 
+// Scroll
 section {
   width: 100%;
   height: auto;
@@ -71,41 +55,39 @@ section {
   scrollbar-width: none; /* Firefox */
 }
 .scroll-container::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Edge */
+  display: none;
 }
 
+//Receipt
 @media print {
   body * {
     visibility: hidden;
   }
-
   #receipt,
   #receipt * {
     visibility: visible;
   }
-
   #receipt {
     position: absolute;
     left: 0;
     top: 0;
-    width: 80mm; /* Change to 80mm for wider printers */
+    width: 80mm;
     min-height: auto;
-    font-size: 11px; /* Adjust font size for receipt */
+    font-size: 11px;
     margin: 0;
   }
-
   #header {
-    font-size: 16px; /* Adjust font size for receipt */
+    font-size: 16px;
   }
   #payment {
-    font-size: 11px; /* Adjust font size for receipt */
+    font-size: 11px;
   }
 
   button {
-    display: none !important; /* Hide print button */
+    display: none !important;
   }
   @page {
-    size: 58mm auto; /* Change to 80mm if needed */
+    size: 88mm auto;
     margin: 0;
   }
 }
